fix(form): align on one-x stack spacing for form elements

--- a/src/components/formGroup/styles/vars/CdrFormGroup.vars.scss
+++ b/src/components/formGroup/styles/vars/CdrFormGroup.vars.scss
@@ -9,7 +9,7 @@
   padding-inline-end: 0;
   padding-block-end: 0;
 
-  margin-bottom: $cdr-space-two-x;
+  margin-bottom: $cdr-space-one-x;
 
   legend {
     padding-inline-start: 0;
