--- a/src/components/input/styles/CdrInput.scss
+++ b/src/components/input/styles/CdrInput.scss
@@ -191,3 +191,7 @@
   margin-top: $cdr-space-half-x;
   margin-bottom: $cdr-space-quarter-x;
 }
+
+.cdr-input-container {
+  margin-bottom: $cdr-space-one-x;
+}
