--- a/src/components/select/styles/CdrSelect.scss
+++ b/src/components/select/styles/CdrSelect.scss
@@ -149,3 +149,7 @@
   margin-top: $cdr-space-half-x;
   margin-bottom: $cdr-space-quarter-x;
 }
+
+.cdr-select-container {
+  margin-bottom: $cdr-space-one-x;
+}
